# DiligentSamples-fork

./: .gitmodules  CMakeLists.txt
.serena/: .gitignore
SampleBase/include/: FirstPersonCamera.hpp
Samples/: CMakeLists.txt
Samples/GLTFViewer/src/: GLTFViewer.cpp  GLTFViewer.hpp
Samples/RTXPT/: CMakeLists.txt  RTXPT_FORK_MAPPING.md  readme.md
Samples/RTXPT/assets/: .gitignore  README.md
Samples/RTXPT/assets/shaders/: RTXPTBSDF.hlsli  RTXPTBlit.psh  RTXPTBlit.vsh  RTXPTCommon.fxh  RTXPTDebugCompute.csh  RTXPTEnvironment.hlsli  RTXPTLightSampling.hlsli  RTXPTMaterialBridge.hlsli  RTXPTMinimal.rchit  RTXPTMinimal.rgen  RTXPTMinimal.rmiss  RTXPTReference.rahit  RTXPTReference.rchit  RTXPTReference.rgen  RTXPTReference.rmiss  RTXPTSceneBridge.hlsli  RTXPTShaderShared.hlsli
Samples/RTXPT/assets/shaders/PathTracer/: Config.h  DenoisingGuidesBaker.hlsl  EmissiveTriangleBuild.hlsl  ExportVisibilityBuffer.csh  PathPayload.hlsli  PathState.hlsli  PathTracer.hlsli  PathTracerAnyHit.rahit  PathTracerBridge.hlsli  PathTracerClosestHit.rchit  PathTracerHelpers.hlsli  PathTracerMiss.rmiss  PathTracerNestedDielectrics.hlsli  PathTracerSample.rgen  PathTracerShared.h  PathTracerStablePlanes.hlsli  PathTracerTypes.hlsli  PathTracerVisibilityMiss.rmiss  SkinnedVertexBuild.csh  StablePlanes.hlsli
Samples/RTXPT/assets/shaders/PathTracer/Lighting/: EnvMap.hlsli  EnvMapImportanceBaker.hlsl  LightSampler.hlsli  LightingConfig.h  LightingTypes.hlsli  LightsBaker.hlsl  PolymorphicLight.hlsli
Samples/RTXPT/assets/shaders/PathTracer/Rendering/Materials/: BxDF.hlsli  InteriorList.hlsli  LobeType.hlsli  MaterialBridge.hlsli
Samples/RTXPT/assets/shaders/PathTracer/Scene/Material/: MaterialData.hlsli
Samples/RTXPT/assets/shaders/PathTracer/Utils/: SampleGenerators.hlsli  StatelessSampleGenerators.hlsli
Samples/RTXPT/assets/shaders/PostProcessing/: RTXPTAccumulation.csh  RTXPTBloomCopy.psh  RTXPTBloomShared.h  RTXPTDenoiserNRD.hlsli  RTXPTPostProcess.csh  RTXPTSuperResolutionMotion.csh  RTXPTTemporalAAInputs.csh
Samples/RTXPT/assets/shaders/PostProcessing/ToneMapper/: Luminance.psh  ToneMapping.hlsl  ToneMapping.ps.hlsli  ToneMappingShared.h
Samples/RTXPT/shaders/PathTracer/: Config.h  DenoisingGuidesBaker.hlsl  EmissiveTriangleBuild.hlsl  PathPayload.hlsli  PathState.hlsli  PathTracer.hlsli  PathTracerAnyHit.rahit  PathTracerBridge.hlsli  PathTracerClosestHit.rchit  PathTracerHelpers.hlsli  PathTracerMiss.rmiss  PathTracerSample.rgen  PathTracerShared.h  PathTracerStablePlanes.hlsli  StablePlanes.hlsli
Samples/RTXPT/shaders/PathTracer/Lighting/: EnvMapImportanceBaker.hlsl  LightProxyBuild.hlsl  LightSampler.hlsli
Samples/RTXPT/shaders/PathTracer/Rendering/Materials/: LobeType.hlsli  MaterialBridge.hlsli
Samples/RTXPT/shaders/PathTracer/Rendering/Volumes/: HomogeneousVolumeSampler.hlsli
Samples/RTXPT/shaders/PathTracer/Scene/Material/: HomogeneousVolumeData.hlsli  MaterialData.hlsli
Samples/RTXPT/shaders/PathTracer/Utils/: SampleGenerators.hlsli
Samples/RTXPT/shaders/PostProcessing/: RTXPTBloomBlur.psh  RTXPTDenoiserNRD.hlsli  RTXPTPostProcess.csh  RTXPTTemporalAAInputs.csh
Samples/RTXPT/src/: RTXPTAccelerationStructures.cpp  RTXPTAccelerationStructures.hpp  RTXPTAccumulationPass.cpp  RTXPTAccumulationPass.hpp  RTXPTBlitPass.cpp  RTXPTBlitPass.hpp  RTXPTBloomPass.cpp  RTXPTBloomPass.hpp  RTXPTCameraBasis.hpp  RTXPTComputePass.cpp  RTXPTComputePass.hpp  RTXPTDenoisingGuidesBaker.cpp  RTXPTDenoisingGuidesBaker.hpp  RTXPTEmissiveTrianglePass.cpp  RTXPTEmissiveTrianglePass.hpp  RTXPTEnvMapBaker.cpp  RTXPTEnvMapBaker.hpp  RTXPTEnvMapBakerPass.cpp  RTXPTEnvMapBakerPass.hpp  RTXPTFrameConstants.hpp  RTXPTLightProxyBuildPass.cpp  RTXPTLightProxyBuildPass.hpp  RTXPTLights.cpp  RTXPTLights.hpp  RTXPTLightsBaker.cpp  RTXPTLightsBaker.hpp  RTXPTLightsBakerPass.cpp  RTXPTLightsBakerPass.hpp  RTXPTMaterials.cpp  RTXPTMaterials.hpp  RTXPTNrdConfig.cpp  RTXPTNrdConfig.hpp  RTXPTNrdIntegration.cpp  RTXPTNrdIntegration.hpp  RTXPTPostProcessPass.cpp  RTXPTPostProcessPass.hpp  RTXPTPostProcessPipeline.cpp  RTXPTPostProcessPipeline.hpp  RTXPTRayTracingPass.cpp  RTXPTRayTracingPass.hpp  (+21 more)
Tutorials/Tutorial27_PostProcessing/: CMakeLists.txt
docs/superpowers/plans/: 2026-06-09-rtxpt-path-payload-upstream-alignment.md
docs/superpowers/specs/: 2026-06-09-rtxpt-path-payload-upstream-alignment-design.md
